feat(config): add base URL for production API calls
- Add VITE_BASE_URL to .env for deployment environment
- Update sendMail.ts to use base URL for API endpoint
- Comment out form reset in Contact.tsx to prevent clearing fields after submission

This enables the application to correctly route API requests in production deployments on platforms like Vercel. The form reset is disabled to retain user input for potential follow-up.

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ SMTP_SECURE=false
 SMTP_USER=peterpaultolulope@gmail.com
 SMTP_PASS=drncyjihrvrygymy
 FROM_EMAIL=peterpaultolulope@gmail.com
+VITE_BASE_URL=https://sparkleens.vercel.app
